--- a/stack/buildspec.yaml
+++ b/stack/buildspec.yaml
@@ -16,6 +16,9 @@ phases:
   build:
     commands:
       # copy deployment_stack to generate CDK deployment folder
+      - ls
+      - ls ../
+      - pwd
       - cp -r ../* ./
       - cdk bootstrap aws://${ACCOUNT_ID}/${AWS_REGION}
       - cdk deploy --parameters ProjectName=${PROJECT_NAME} --require-approval never
