--- a/stack/buildspec.yaml
+++ b/stack/buildspec.yaml
@@ -9,6 +9,9 @@ phases:
 
   pre_build:
     commands:
+      - ls
+      - ls ../
+      - pwd
       - mkdir stack/deployment
       - cd stack/deployment
       - cdk init --language=python
