--- a/stack/buildspec.yaml
+++ b/stack/buildspec.yaml
@@ -13,6 +13,8 @@ phases:
       - pwd
       - pip install -r requirements.txt
       - cd ..
+      - git clone https://github.com/aws-samples/cdk-assume-role-credential-plugin.git
+      - npm install -g git+https://github.com/aws-samples/cdk-assume-role-credential-plugin.git
       - mkdir deploytmp
       - cd deploytmp
       - cdk init --language=python
@@ -26,4 +28,4 @@ phases:
       - pwd
       - cp -r ../faropt/* ./
       - ls
-      - cdk deploy
+      - cdk deploy faropt
