--- a/stack/buildspec.yaml
+++ b/stack/buildspec.yaml
@@ -19,18 +19,11 @@ phases:
       - cdk bootstrap aws://${ACCOUNT_ID}/${AWS_REGION}
       - export CDK_DEFAULT_ACCOUNT=${ACCOUNT_ID}
       - export CDK_DEFAULT_REGION=${AWS_REGION}
-      - unset AWS_ACCESS_KEY_ID ;
-      - creds=$(mktemp -d)/creds.json ;
-      - aws sts assume-role --role-arn arn:aws:iam::${ACCOUNT_ID}:role/ProvisioningRole --role-session-name "Deploy" > $creds ;
-      - export AWS_ACCESS_KEY_ID=cat ${creds} | grep "AccessKeyId" | cut -d '"' -f 4
-      - export AWS_SECRET_ACCESS_KEY=cat ${creds} | grep "SecretAccessKey" | cut -d '"' -f 4
-      - export AWS_SECRET_ACCESS_KEY=cat ${creds} | grep "SecretAccessKey" | cut -d '"' -f 4
-      - export AWS_SESSION_TOKEN=cat ${creds} | grep "SessionToken" | cut -d '"' -f 4
-
+     
   build:
     commands:
       # copy deployment_stack to generate CDK deployment folder
       - pwd
-      - cp -r ../faropt/* ./
+      - cp -r ../faropt/* ./deploytmp/
       - ls
-      - cdk deploy faropt --ec2creds
+      - cdk deploy
