--- a/stack/buildspec.yaml
+++ b/stack/buildspec.yaml
@@ -13,20 +13,16 @@ phases:
       - pwd
       - pip install -r requirements.txt
       - cd ..
-      - mkdir deploytmp
+      - mkdir -p deploytmp/faropt
       - cd deploytmp
+      - cd faropt
       - cdk init --language=python
-      - export CDK_DEFAULT_ACCOUNT=${ACCOUNT_ID}
-      - export CDK_DEFAULT_REGION=${AWS_REGION}
      
   build:
     commands:
       # copy deployment_stack to generate CDK deployment folder
       - pwd
-      - cp -r ../faropt/faropt/faropt_stack.py ./deploytmp/deploytmp_stack.py
-      - cp -r ../faropt/*  ./
-      - cat ./deploytmp/deploytmp_stack.py
-      - ls ./
-      - ls deploytmp/
       - cdk bootstrap aws://${ACCOUNT_ID}/${AWS_REGION}
+      - cp -r ../faropt/faropt/faropt_stack.py ./faropt/faropt_stack.py
+      - cat ./faropt/faropt_stack.py
       - cdk deploy
