--- a/stack/buildspec.yaml
+++ b/stack/buildspec.yaml
@@ -21,6 +21,6 @@ phases:
       # copy deployment_stack to generate CDK deployment folder
       - pwd
       - rm ./faropt/faropt_stack.py
-      - mv ../faropt/faropt/faropt_stack.py ./faropt/
+      - mv ../../faropt/faropt_stack.py ./faropt/
       - cat ./faropt/faropt_stack.py
       - cdk deploy
